--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: install required local packages
+- name: Install prerequisite RPM packages
   yum:
-    - name: "{{ item }}"
-    - state: latest
+    name: "{{ item }}"
+    state: present
   with_items:
     - git
     - gitweb
@@ -21,7 +21,9 @@
     - qemu-kvm
     - qemu-kvm-common
     - qemu-kvm-tools
+    - rpcbind
     - samba
-    - vim
     - virt-install
     - virt-manager
+  tags:
+    - hypervisor_setup
