--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -121,7 +121,7 @@
     state: started
     enabled: yes
   tags:
-    - hypervisor_setup
+    cd - hypervisor_setup
 
 - name: re-Start GIT daemon (to ensure latest configuration is loaded)
   service:
@@ -176,14 +176,14 @@
 - name: Stat authorized_keys
   stat:
     path: "{{ git_projects }}/authorized_keys"
-    register: stat_authorized_keys
+  register: stat_authorized_keys
   tags:
     - hypervisor_setup
 
 - name: Allow GIT access
   copy:
-    src: "{{ git_projects }}/id_rsa.pub"
-    dest: "{{ git_projects }}/authorized_keys"
+    src: "{{ git_projects }}/.ssh/id_rsa.pub"
+    dest: "{{ git_projects }}/.ssh/authorized_keys"
     owner: git
     group: git
   when: stat_authorized_keys.stat.exists == False
