Fixed git ssh key source

--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 
 - name: configure hypervisor
   become: yes
-  hosts: hypervisor
+  hosts: hypervisors
   roles:
     - { role: hypervisor_setup }
 
