Split hypervisor setup role into more manageable sub tasks

--- a/main.yml
+++ b/main.yml
@@ -6,135 +6,8 @@
   roles:
     - { role: hypervisor_setup }
 
-# Unstable and still in development
-- name: Build Setup
-  user: root
-  hosts: all
+## Unstable and still in development
+#- name: Build Setup
+#  user: root
+#  hosts: all
 
-  tasks:
-  - name: Start Kernel Virtual Machine (KVM) service (libvirtd)
-    service:
-      name: libvirtd
-      state: started
-      enabled: yes
-    register: kvm
-    tags:
-      - hypervisor_setup
-
-  - name: Wait for libvirtd to start
-    pause:
-      seconds: 120
-    when: kvm.changed
-    tags:
-      - hypervisor_setup
-
-  - name: Query Kernel Virtual Machine to get a list of private networks
-    virt_net:
-      command: list_nets
-    register: kvm_networks
-    tags:
-      - hypervisor_setup
-
-  - name: List existing Kernel Virtual Machine networks
-    debug:
-      msg: "{{ kvm_networks.list_nets }}"
-    tags:
-      - hypervisor_setup
-
-  - name: Create private network
-    virt_net:
-      command: define
-      name: "{{ kvm_private_network_name }}"
-      xml: '{{ lookup("template", "templates/hypervisor/private-net.xml.j2") }}'
-      autostart: yes
-      state: present
-    when: kvm_private_network_name not in kvm_networks.list_nets
-    tags:
-      - hypervisor_setup
-
-  - name: Start private network
-    virt_net:
-      command: start
-      name: private
-    when: kvm_private_network_name not in kvm_networks.list_nets
-    tags:
-      - hypervisor_setup
-
-  - name: Get list of Virtual Machines available on the host
-    virt:
-      command: list_vms
-    register: vms
-
-  - name: Display Virtual Machine list (debugging purposes)
-    debug:
-      msg: "{{ item }}"
-    with_items:
-      - "{{ vms.list_vms }}"
-
-  - name: false
-    command: /bin/false
-
-  - name: Create Virtual Machine
-    shell: virt-install -n "{{ item.name }}"
-           -r "{{ item.mem }}"
-           --location "{{ item.url }}"
-           --vcpus "{{ item.cpu }}"
-           --os-type "{{ item.os.type }}"
-           --os-variant "{{ item.os.variant }}"
-           --network=network:"{{ kvm_private_network_name}}",model=e1000
-           --graphics spice
-           --"{{ item.virt_hypervisor }}"
-           --virt-type "{{ item.virt_type }}"
-           --disk size="{{ item.disk.size }}",path="{{ item.disk.path }}/{{ item.name }}".qcow2,format=qcow2
-           --disk path="{{ item.url }}",device=cdrom
-           --extra-args="ks=http://{{ kvm_private_network_ip }}:{{ www_port }}/{{ kickstart_file_configuration}} ip=dhcp"
-           --check path_in_use=off
-    when: item.name not in vms.list_vms
-    with_items:
-      - "{{ guests }}"
-
-  - name: Allow time for newly created Virtual Machine to boot
-    pause:
-      minutes: 1
-
-  - name: Query KVM for environment/VM details
-    virt:
-      command: info
-    register: virt_info
-
-  - name: Ensure all created Virtual Machines are running
-    virt:
-      name: "{{ item.name }}"
-      command: start
-    when: virt_info[item.name]['state'] != 'running'
-    with_items:
-      - "{{ guests }}"
-
-  - name: Wait for all Virtual Machines to enter running state
-    virt:
-      command: info
-    register: virt_info
-    until: virt_info[item.name]['state'] == 'running'
-    retries: 1500
-    delay: 10
-    with_items:
-      - "{{ guests }}"
-
-  - name: Display each Virtual Machine and its IP address
-    debug:
-      msg: "{{ item }}"
-    with_items:
-      - "{{ vms.list_vms }}"
-
-  - name: Query Hypervisor
-    virt:
-      command: info
-    register: virt_info
-    tags:
-      - vm_clean
-
-  - name: Display output of Hypervisor query
-    debug:
-      msg: "{{ virt_info }}"
-    tags:
-      - vm_clean
