--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+#####
+# Base setup
+
 - name: Install prerequisite RPM packages
   yum:
     name: "{{ item }}"
@@ -29,53 +32,13 @@
   tags:
     - hypervisor_setup
 
-- name: Enable Port for HTTP communication in SELinux
-  seport:
-    ports: "{{ www_port }}"
-    proto: tcp
-    setype: http_port_t
-    state: present
-  ignore_errors: yes
-  tags:
-    - hypervisor_setup
+#####
+# Kickstart Web Config
 
-- name: Stage Apache HTTPD kickstart configuration file
-  template:
-    src: "{{ www_file_configuration_ks_template }}"
-    dest: "/etc/httpd/conf.d/{{ www_file_configuration_ks }}"
-    owner: root
-    group: root
-    mode: 0644
-  tags:
-    - hypervisor_setup
+- include: kickstart.yml
 
-- name: Create kickstart configuration file directory available via web service
-  file:
-    path: "{{ kickstart_directory }}"
-    state: directory
-    owner: apache
-    group: apache
-    mode: 0775
-  tags:
-    - hypervisor_setup
-
-- name: Stage kickstart configuration file for guest network configuration installations
-  template:
-    src: "{{ kickstart_file_configuration_template }}"
-    dest: "{{ kickstart_directory }}/{{ kickstart_file_configuration }}"
-    owner: apache
-    group: apache
-    mode: "a=r"
-
-- name: Set SELinux context of kickstart file
-  sefcontext:
-    target: "{{ kickstart_directory }}/{{ kickstart_file_configuration }}"
-    setype: httpd_sys_content_t
-    state: present
-  ignore_errors: yes
-
-- name: Run restore context to reload SELinux
-  shell: "restorecon -Rv {{ kickstart_directory }}"
+#####
+# Share directory
 
 - name: Create share directory to export deliverables to end-user
   file:
@@ -86,6 +49,9 @@
     mode: 0775
   tags:
     - hypervisor_setup
+
+#####
+# Ansible Tower
 
 - name: Create Ansible Tower Bundle directory
   file:
@@ -115,277 +81,33 @@
     dest: "{{ share_directory }}/ansible"
     extra_opts: "--strip-components=1"
 
-- name: Start GIT daemon
-  service:
-    name: git.socket
-    state: started
-    enabled: yes
-  tags:
-    cd - hypervisor_setup
+#####
+# Git
 
-- name: re-Start GIT daemon (to ensure latest configuration is loaded)
-  service:
-    name: git.socket
-    state: restarted
-    enabled: yes
-  tags:
-    - hypervisor_setup
+- include: git.yml
 
-- name: Open firewall port(s) for GIT tcp
-  firewalld:
-    port: "9148/tcp"
-    permanent: true
-    state: enabled
-  tags:
-    - hypervisor_setup
+#####
+# KVM
 
-- name: Open firewall port(s) for GIT udp
-  firewalld:
-    port: "9148/udp"
-    permanent: true
-    state: enabled
-  tags:
-    - hypervisor_setup
+- include: kvm.yml
 
-- name: Open firewall port(s) for GIT Web
-  firewalld:
-    port: "{{ git_port }}/tcp"
-    permanent: true
-    state: enabled
-  tags:
-    - hypervisor_setup
+#####
+# Apache
 
-- name: Update /etc/shells for git-shell
-  lineinfile:
-    path: /etc/shells
-    line: "/bin/git-shell"
-  tags:
-    - hypervisor_setup
+- include: apache.yml
 
-- name: Create GIT user
-  user:
-    name: git
-    password: "{{ password_git }}"
-    home: "{{ git_projects }}"
-    shell: "/bin/git-shell"
-    generate_ssh_key: yes
-    update_password: always
-  tags:
-    - hypervisor_setup
+#####
+# NFS
 
-- name: Stat authorized_keys
-  stat:
-    path: "{{ git_projects }}/authorized_keys"
-  register: stat_authorized_keys
-  tags:
-    - hypervisor_setup
+- include: nfs.yml
 
-- name: Allow GIT access
-  copy:
-    remote_src: True
-    src: "{{ git_projects }}/.ssh/id_rsa.pub"
-    dest: "{{ git_projects }}/.ssh/authorized_keys"
-    owner: git
-    group: git
-  when: stat_authorized_keys.stat.exists == False
-  tags:
-   - hypervisor_setup
+#####
+# Samba
 
-- name: Ensure that Ansible Galaxy role (STIG) is in share_directory
-  stat:
-    path: "{{ share_directory }}/galaxy.MindPointGroup"
-  register: galaxy_MindPointGroup_RHEL7_STIG
-  tags:
-    - hypervisor_setup
+- include: samba.yml
 
-- name: Create directory for Ansible Galaxy role (STIG) in share_directory
-  file:
-    path: "{{ share_directory }}/galaxy.MindPointGroup"
-    state: directory
-    owner: git
-    group: git
-    mode: 0775
-  when: galaxy_MindPointGroup_RHEL7_STIG.stat.exists == False
-  tags:
-    - hypervisor_setup
-
-- name: Clone RHEL7-STIG.git from Ansible Galaxy if it does not exist
-  command: git clone https://github.com/MindPointGroup/RHEL7-STIG.git
-  args:
-    chdir: "{{ share_directory }}/galaxy.MindPointGroup"
-  become_user: git
-  when: galaxy_MindPointGroup_RHEL7_STIG.stat.exists == False
-  tags:
-    - hypervisor_setup
-
-- name: Create directory for Ansible Galaxy role (STIG) in GIT path
-  file:
-    path: "{{ git_projects }}/galaxy.MindPointGroup"
-    state: directory
-    owner: git
-    group: git
-    mode: 0775
-  tags:
-   - hypervisor_setup
-
-- name: Stage Ansible Galaxy role (STIG) in GIT path
-  synchronize:
-    src: "{{ share_directory }}/galaxy.MindPointGroup/"
-    dest: "{{ git_projects }}/galaxy.MindPointGroup/"
-    delete: yes
-    recursive: yes
-  tags:
-    - hypervisor_setup
-
-- name: Ensure that Ansible Galaxy role (NIST 800-53) is in share_directory
-  stat:
-    path: "{{ share_directory }}/galaxy.rhtps"
-  register: galaxy_rhtps_800_53
-  tags:
-    - hypervisor_setup
-
-- name: Create directory for Ansible Galaxy role (NIST 800-53) in share_directory
-  file:
-    path: "{{ share_directory }}/galaxy.rhtps"
-    state: directory
-    owner: git
-    group: git
-    mode: 0775
-  when: galaxy_rhtps_800_53.stat.exists == False
-  tags:
-    - hypervisor_setup
-
-- name: Clone rhtps.800-53 from Ansible Galaxy if it does not exist
-  command: git clone https://github.com/rhtps/ansible-role-800-53.git
-  args:
-    chdir: "{{ share_directory }}/galaxy.rhtps"
-  become_user: git
-  when: galaxy_rhtps_800_53.stat.exists == False
-  tags:
-    - hypervisor_setup
-
-- name: Create directory for Ansible Galaxy roles (NIST 800-53)
-  file:
-    path: "{{ git_projects }}/galaxy.rhtps"
-    state: directory
-    owner: git
-    group: git
-    mode: 0775
-  tags:
-    - hypervisor_setup
-
-- name: Stage Ansible Galaxy role (NIST 800-53) in GIT path
-  synchronize:
-    src: "{{ share_directory }}/galaxy.rhtps/"
-    dest: "{{ git_projects }}/galaxy.rhtps/"
-    delete: yes
-    recursive: yes
-  tags:
-    - hypervisor_setup
-
-- name: Start Apache HTTPD - Web Service (required for kickstart for network configuration)
-  service:
-    name: httpd
-    state: started
-    enabled: yes
-  tags:
-   - hypervisor_setup
-
-- name: re-Start Apache HTTPD (to ensure latest configuration is loaded)
-  service:
-    name: httpd
-    state: restarted
-    enabled: yes
-  tags:
-    - hypervisor_setup
-
-- name: Open firewall port for Apache HTTPD
-  firewalld:
-    port: "{{ www_port }}/tcp"
-    permanent: true
-    state: enabled
-  tags:
-    - hypervisor_setup
-
-- name: Stage NFS configuration
-  template:
-    src: "{{ exports_file_configuration_template }}"
-    dest: "/etc/{{ exports_file_configuration }}"
-    owner: root
-    group: root
-    mode: 0644
-  tags:
-    - hypervisor_setup
-
-- name: Start NFS service
-  service:
-    name: nfs
-    state: started
-    enabled: yes
-  tags:
-    - hypervisor_setup
-
-- name: re-Start NFS service (ensure latest configuraiton is loaded)
-  service:
-    name: nfs
-    state: restarted
-    enabled: yes
-  tags:
-    - hypervisor_setup
-
-- name: Open firewall port for NFS
-  firewalld:
-    service: "{{ item }}"
-    permanent: true
-    state: enabled
-  with_items:
-    - nfs
-    - mountd
-    - rpc-bind
-  tags:
-    - hypervisor_setup
-
-- name: Stage Samba configuration file
-  template:
-    src: "{{ samba_file_configuration_template }}"
-    dest: "/etc/samba/{{ samba_file_configuration }}"
-    owner: root
-    group: root
-    mode: 0644
-  tags:
-    - hypervisor_setup
-
-- name: Start Samba to provide SMB/CIFS networking service
-  service:
-    name: smb
-    state: started
-    enabled: yes
-  tags:
-    - hypervisor_setup
-
-- name: re-Start Samba (to ensure latest configuration is loaded)
-  service:
-    name: smb
-    state: restarted
-    enabled: yes
-  tags:
-    - hypervisor_setup
-
-- name: Open firewall port(s) for Samba
-  firewalld:
-    service: samba
-    permanent: true
-    state: enabled
-  tags:
-    - hypervisor_setup
-
-- name: Reload firewalld
-  service:
-    name: firewalld
-    state: reloaded
-    enabled: yes
-  tags:
-    - hypervisor_setup
+#####
+# SELinux
 
 - name: Set SELinux context of shared directory
   sefcontext:
