--- a/roles/hypervisor_setup/tasks/main.yml
+++ b/roles/hypervisor_setup/tasks/main.yml
@@ -17,6 +17,8 @@
     - gitweb
     - git-daemon
     - httpd
+    - libguestfs
+    - libguestfs-tools
     - libselinux-python
     - libvirt-client
     - libvirt-daemon
