--- a/roles/hypervisor_setup/tasks/kickstart.yml
+++ b/roles/hypervisor_setup/tasks/kickstart.yml
@@ -13,6 +13,22 @@
   tags:
     - hypervisor_setup
 
+- name: Start Apache HTTPD - Web Service (required for kickstart for network configuration)
+  service:
+    name: httpd
+    state: started
+    enabled: yes
+  tags:
+    - hypervisor_setup
+
+- name: re-Start Apache HTTPD (to ensure latest configuration is loaded)
+  service:
+    name: httpd
+    state: restarted
+    enabled: yes
+  tags:
+    - hypervisor_setup
+
 - name: Create kickstart configuration file directory available via web service
   file:
     path: "{{ kickstart_directory }}"
@@ -43,6 +59,7 @@
     target: "{{ item }}"
     setype: httpd_sys_content_t
     state: present
+    reload: True
   with_items:
     - "{{ kickstart_directory }}/{{ kickstart_node_configuration }}"
     - "{{ kickstart_directory }}/{{ kickstart_tower_configuration }}"
