--- a/roles/hypervisor_setup/tasks/kvm.yml
+++ b/roles/hypervisor_setup/tasks/kvm.yml
@@ -84,7 +84,7 @@
          --virt-type "{{ item.virt_type }}"
          --disk size="{{ item.disk.size }}",path="{{ item.disk.path }}/{{ item.name }}".qcow2,format=qcow2
          --disk path="{{ item.url }}",device=cdrom
-         --extra-args="ks=http://{{ kvm_private_network_ip }}:{{ www_port }}/ks.cfg-{{ item.ks }} ip=dhcp"
+         --extra-args="ks=http://{{ kvm_private_network_ip }}:{{ www_port_ks }}/ks.cfg-{{ item.ks }} ip=dhcp"
          --check path_in_use=off
   when: item.name not in vms.list_vms
   with_items:
