--- a/roles/hypervisor_setup/tasks/kvm.yml
+++ b/roles/hypervisor_setup/tasks/kvm.yml
@@ -3,6 +3,22 @@
 #####
 # KVM
 
+- name: Update dnsmasq update
+  lineinfile:
+    dest: /etc/dnsmasq.conf
+    line: "no-hosts"
+    state: present
+  tags:
+    - hypervisor_setup
+
+- name: Reload dnsmasq if it is already running
+  service:
+    name: dnsmasq
+    state: reloaded
+    enabled: yes
+  tags:
+    - hypervisor_setup
+
 - name: Start Kernel Virtual Machine (KVM) service (libvirtd)
   service:
     name: libvirtd
@@ -89,102 +105,6 @@
   when: item.name not in vms.list_vms
   with_items:
     - "{{ guests }}"
-  tags:
-    - hypervisor_setup
-
-- name: Resolve Guest IP addresses
-  command: "dig @{{ kvm_private_network_ip }} +short {{ item.name }}.default"
-  register: resolved_IPs
-  with_items:
-    - "{{ guests }}"
-  tags:
-    - hypervisor_setup
-
-- name: Update /etc/hosts with Guest IPs
-  lineinfile:
-    dest: /etc/hosts
-    regexp: ".*{{ item.item.name }}.default$"
-    line: "{{ item.stdout }} {{ item.item.name }}.default"
-    state: present
-  with_items:
-    - "{{ resolved_IPs.results }}"
-  tags:
-    - hypervisor_setup
-
-- name: Update /etc/hosts with Guest IPs
-  lineinfile:
-    dest: /etc/hosts
-    regexp: ".*{{ item.item.name }}.default$"
-    line: "{{ item.stdout }} {{ item.item.name }}.default"
-    state: present
-  with_items:
-    - "{{ resolved_IPs.results }}"
-  tags:
-    - hypervisor_setup
-
-- name: Setup forwards (Display ports to link)
-  debug:
-    msg: "{{ item.0.name }} {{ item.1.label }} {{ item.1.internal }} {{ item.1.external }}"
-  with_subelements:
-    - "{{ guests }}"
-    - ports
-  tags:
-    - hypervisor_setup
-
-- name: Open firewall port(s) for guests (socat)
-  firewalld:
-    port: "{{ item.1.external }}/tcp"
-    permanent: true
-    state: enabled
-  with_subelements:
-    - "{{ guests }}"
-    - ports
-  tags:
-    - hypervisor_setup
-
-- name: If forward exist already - stop
-  service:
-    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
-    state: stopped
-    enabled: no
-  ignore_errors: yes
-  with_subelements:
-    - "{{ guests }}"
-    - ports
-  tags:
-    - hypervisor_setup
-
-- name: If forward exist already - absent
-  service:
-    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
-    state: absent
-    enabled: no
-  ignore_errors: yes
-  with_subelements:
-    - "{{ guests }}"
-    - ports
-  tags:
-    - hypervisor_setup
-
-- name: Setup forwards to internal guests via socat
-  copy:
-    dest: "/etc/systemd/system/rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
-    content: "[Service]\nExecStart=/usr/bin/socat TCP4-LISTEN:{{ item.1.external }},fork TCP4:{{ item.0.name }}.default:{{ item.1.internal }}\n"
-  with_subelements:
-    - "{{ guests }}"
-    - ports
-  tags:
-    - hypervisor_setup
-
-- name: Start socat services
-  service:
-    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
-    state: started
-    enabled: yes
-  ignore_errors: yes
-  with_subelements:
-    - "{{ guests }}"
-    - ports
   tags:
     - hypervisor_setup
 
@@ -324,6 +244,18 @@
   tags:
     - hypervisor_setup
 
+- name: All sudo of admin user on all guests
+  copy:
+    dest: /guests/{{ item.name }}/etc/sudoers.d/admin
+    content: "admin ALL=(ALL) NOPASSWD:ALL"
+    owner: root
+    group: root
+    mode: 0644
+  with_items:
+    - "{{ guests }}"
+  tags:
+    - hypervisor_setup
+
 - name: Set hostname of each of the systems
   copy:
     dest: /guests/{{ item.name }}/etc/yum.repos.d/RPMs.repo
@@ -371,6 +303,18 @@
 
 - name: Mount home filesystem for all guests to the hypervisor
   shell: guestmount -m /dev/VolGroup/LogVol02:/:defaults -d {{ item.name }} /guests/{{ item.name }}
+  with_items:
+    - "{{ guests }}"
+  tags:
+    - hypervisor_setup
+
+- name: Create ansible.cfg for admin
+  copy:
+    dest: "/guests/{{ item.name }}/admin/ansible.cfg"
+    content: "[defaults]\nconnection = smart\ntimeout = 60\nforks = 10\ninventory = /home/admin/hosts\n"
+    owner: admin
+    group: admin
+    mode: 0644
   with_items:
     - "{{ guests }}"
   tags:
@@ -523,5 +467,90 @@
   delay: 10
   with_items:
     - "{{ guests }}"
+  tags:
+    - hypervisor_setup
+
+- name: Setup forwards (Display ports to link)
+  debug:
+    msg: "{{ item.0.name }} {{ item.1.label }} {{ item.1.internal }} {{ item.1.external }}"
+  with_subelements:
+    - "{{ guests }}"
+    - ports
+  tags:
+    - hypervisor_setup
+
+- name: Open firewall port(s) for guests (socat)
+  firewalld:
+    port: "{{ item.1.external }}/tcp"
+    permanent: true
+    state: enabled
+  with_subelements:
+    - "{{ guests }}"
+    - ports
+  tags:
+    - hypervisor_setup
+
+- name: If forward exist already - stop
+  service:
+    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
+    state: stopped
+    enabled: no
+  ignore_errors: yes
+  with_subelements:
+    - "{{ guests }}"
+    - ports
+  tags:
+    - hypervisor_setup
+
+- name: If forward exist already - absent
+  service:
+    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
+    state: absent
+    enabled: no
+  ignore_errors: yes
+  with_subelements:
+    - "{{ guests }}"
+    - ports
+  tags:
+    - hypervisor_setup
+
+- name: Resolve Guest IP addresses
+  command: "dig @{{ kvm_private_network_ip }} +short {{ item.name }}.default"
+  register: resolved_IPs
+  with_items:
+    - "{{ guests }}"
+  tags:
+    - hypervisor_setup
+
+- name: Setup forwards to internal guests via socat
+  copy:
+    dest: "/etc/systemd/system/rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
+    content: "[Service]\nExecStart=/usr/bin/socat TCP4-LISTEN:{{ item.1.external }},fork TCP4:{{ item.0.name }}.default:{{ item.1.internal }}\n"
+  with_subelements:
+    - "{{ guests }}"
+    - ports
+  tags:
+    - hypervisor_setup
+
+- name: Update /etc/hosts with Guest IPs
+  lineinfile:
+    dest: /etc/hosts
+    regexp: ".*{{ item.item.name }}.default$"
+    line: "{{ item.stdout }} {{ item.item.name }}.default"
+    state: present
+  with_items:
+    - "{{ resolved_IPs.results }}"
+  tags:
+    - hypervisor_setup
+
+- name: Start socat services
+  service:
+    name: "rh-workshop-{{ item.0.name }}-{{ item.1.internal }}-{{ item.1.external }}-socat.service"
+    state: started
+    enabled: yes
+  ignore_errors: yes
+  with_subelements:
+    - "{{ guests }}"
+    - ports
   tags:
     - hypervisor_setup
